<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:title="@string/host"
        android:inputType="textUri"
        android:key="host"/>
    <EditTextPreference
        android:title="@string/port"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:key="port" />
    <EditTextPreference
        android:title="@string/password"
        android:inputType="textWebPassword"
        android:password="true"
        android:key="password" />
    <EditTextPreference
        android:title="@string/connection_check_freq"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:summary="@string/connection_check_freq_summary"
        android:key="refresh_freq"/>
    <SwitchPreference
        android:title="@string/disconnect_when_stop"
        android:summary="@string/disconnect_when_stop_summary"
        android:defaultValue="true"
        android:key="battery_economy_background"/>
    <SwitchPreference
        android:title="@string/battery_saver_mode"
        android:summary="@string/battery_saver_mode_summary"
        android:defaultValue="false"
        android:key="battery_saver_mode"/>
</PreferenceScreen>